<resources>
    <string name="app_name">Launcher OnePlus</string>

    <!-- Content Description -->
    <string name="icon">Icon</string>
    <string name="image">Image</string>
    <string name="placeholder">Placeholder</string>
    <string name="separator">Separator</string>
    <string name="button">Button</string>

    <!-- APP LEVEL -->
    <!-- String representing the intent to delete a package.-->
    <string name="delete_package_intent" translatable="false">#Intent;action=android.intent.action.DELETE;launchFlags=0x10800000;end</string>

    <!-- Launcher -->
    <string name="search_apps">Search apps</string>
    <string name="shortcut_added_to_home_screen">Shortcut Added To Home Screen!!</string>
    <string name="ez_settings">EZ Settings</string>
    <string name="app_info">App info</string>
    <string name="edit">Edit</string>
    <string name="uninstall">Uninstall</string>
    <string name="widgets">Widgets</string>

    <!-- Drag n Drop -->
    <string name="removeItem">Remove</string>

    <!-- App Selection -->
    <string name="n_app_selected">%d selected</string>
    <string name="select_application_to_hide">Select application to hide</string>

    <!-- Hidden Space -->
    <string name="hidden_space">Hidden Space</string>
    <string name="no_hidden_applications">No hidden applications</string>
    <string name="confirm_your_password">Confirm your password</string>

    <!-- Admin Rights -->
    <string name="accessibility_service_description">An accessibility service to lock the screen.</string>

    <!-- Wallpaper -->
    <string name="wallpaper">Wallpapers</string>
    <string name="setting_wallpaper">Setting Wallpaper</string>
    <string name="done">Done</string>
    <string name="cancel">Cancel</string>
    <string name="wallpaper_updated_successfully">Wallpaper Updated Successfully</string>

    <!-- Attribution -->
    <string name="dummy_attribution">Photo by Ashu on Unsplash</string>
    <string name="photo_by">Photo by</string>
    <string name="on">on</string>
    <string name="unsplash">Unsplash</string>

    <!-- Color Picker -->
    <string name="select_color">Select color</string>
    <string name="color_preference_name">EZ_COLOR_THEME</string>

    <!-- Settings -->
    <string name="home_screen">Home Screen</string>
    <string name="app_drawer">App Drawer</string>
    <string name="folders">Folders</string>
    <string name="look_n_feel">Look &amp; Feel</string>
    <string name="night_mode">Night Mode</string>
    <string name="gesture_n_inputs">Gesture &amp; inputs</string>
    <string name="notification_badges">Notification Badges</string>
    <string name="select_default_launcher">Select default launcher</string>
    <string name="say_thanks">Say thanks</string>
    <string name="about">About</string>
    <string name="contact_support">Contact support</string>

    <!-- Settings Description -->

    <string name="home_screen_description">Set grid, icon layout, dock settings, and more</string>
    <string name="app_drawer_description">Set layout, style, opening gesture, and more</string>
    <string name="folders_description">Set window styles, background colors, and icon layouts</string>
    <string name="look_n_feel_description">Icon preference, animation and scroll speeds, and notification bar options</string>
    <string name="night_mode_description">Schedule automatic dark mode based on time or location</string>
    <string name="gesture_n_inputs_description">Define secondary home button action, along with swipe, tap, and pinch gestures on home screen</string>
    <string name="notification_badges_description">Choose from dynamic badges, notification dots, or numeric badges</string>
    <string name="select_default_launcher_description">OnePlus Launcher</string>
    <string name="say_thanks_description">If you enjoy EZ launcher, drop us a comment in the Play Store</string>
    <string name="about_description">EZ launcher information, open source licence etc</string>
    <string name="contact_support_description">If you\'re having issues, have a question, or simply love EZ, this is where you can get in touch</string>

    <!-- App Drawer -->
    <string name="header_scroll">Scroll</string>
    <string name="scroll_accent_color">Scroll accent color</string>
    <string name="scroll_accent_color_description">Color os the scrollbar slider, letter bubble, overscroll glow and search bar</string>
    <string name="fast_scrollbar">Fast scrollbar</string>
    <string name="fast_scrollbar_description">Add a thumb slider to quickly navigate apps alphabetically</string>

    <string name="header_layout">Layout</string>
    <string name="app_drawer_style">App drawer style</string>
    <string-array name="app_drawer_spinner">
        <item>Vertical</item>
        <item>List</item>
        <item>Horizontal</item>
    </string-array>
    <string name="drawer_app_grid">Drawer App Grid</string>
    <string name="icon_layout">Icon layout</string>
    <string name="icon_layout_description">Match desktop size, Labels: On</string>
    <string name="background_color">Background color</string>
    <string name="background_transparent">Background transparency</string>
    <string name="card_background">Card background</string>
    <string name="frequently_used_apps">Frequently used apps</string>
    <string name="frequently_used_apps_description">Keep commonly used apps in the top row for quick access</string>
    <string name="top_bar">Top bar</string>
    <string name="tab_style">Tab style</string>


</resources>
