<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_grey">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/ic_back_white"
        app:title="@string/app_drawer"
        app:titleTextColor="@color/white" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clScrollAccentColor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/darker_grey"
        android:foreground="@drawable/ripple_cell"
        android:padding="10dp"
        app:layout_constraintTop_toBottomOf="@id/toolbar">

        <ImageView
            android:id="@+id/ivIconScrollAccent"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:contentDescription="@string/icon"
            android:src="@drawable/scroll_accent_drawable"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvSettingTitleScrollAccent"
            style="@style/Text.Primary"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:text="@string/scroll_accent_color"
            android:textColor="@color/white"
            app:layout_constraintEnd_toStartOf="@id/ivIconScrollAccent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvSettingDescriptionScrollAccent"
            style="@style/Text.Primary"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:ellipsize="end"
            android:maxLines="2"
            android:text="@string/scroll_accent_color_description"
            android:textColor="@color/white"
            android:textSize="@dimen/font_small"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/ivIconScrollAccent"
            app:layout_constraintStart_toStartOf="@id/tvSettingTitleScrollAccent"
            app:layout_constraintTop_toBottomOf="@id/tvSettingTitleScrollAccent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>