<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_app_highlight">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/ivUninstall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="40dp"
            android:clickable="true"
            android:focusable="true"
            android:orientation="vertical">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:clickable="false"
                android:contentDescription="@string/button"
                android:focusable="false"
                android:padding="5dp"
                android:src="@drawable/ic_delete" />

            <TextView
                style="@style/Text.Primary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="4dp"
                android:clickable="false"
                android:focusable="false"
                android:gravity="center"
                android:text="@string/uninstall"
                android:textColor="@color/white"
                android:textSize="@dimen/font_extra_small" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ivEdit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="40dp"
            android:clickable="true"
            android:focusable="true"
            android:orientation="vertical">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:clickable="false"
                android:contentDescription="@string/button"
                android:focusable="false"
                android:padding="5dp"
                android:src="@drawable/ic_edit" />

            <TextView
                style="@style/Text.Primary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="4dp"
                android:clickable="false"
                android:focusable="false"
                android:gravity="center"
                android:text="@string/edit"
                android:textColor="@color/white"
                android:textSize="@dimen/font_extra_small" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ivAppInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="40dp"
            android:clickable="true"
            android:focusable="true"
            android:orientation="vertical">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:clickable="false"
                android:contentDescription="@string/button"
                android:focusable="false"
                android:padding="5dp"
                android:src="@drawable/ic_info"
                android:tint="@color/search_bar" />

            <TextView
                style="@style/Text.Primary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="4dp"
                android:clickable="false"
                android:focusable="false"
                android:gravity="center"
                android:text="@string/app_info"
                android:textColor="@color/white"
                android:textSize="@dimen/font_extra_small" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ivWidgets"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:clickable="true"
            android:focusable="true"
            android:orientation="vertical"
            android:visibility="invisible">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:clickable="false"
                android:contentDescription="@string/button"
                android:focusable="false"
                android:padding="5dp"
                android:src="@drawable/ic_info"
                android:tint="@color/search_bar" />

            <TextView
                style="@style/Text.Primary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="4dp"
                android:clickable="false"
                android:focusable="false"
                android:gravity="center"
                android:text="@string/widgets"
                android:textColor="@color/white"
                android:textSize="@dimen/font_extra_small" />

        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>