<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/sliding_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:background="@color/black">

    <ImageView
        android:id="@+id/ivDragIcon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:contentDescription="@string/icon"
        android:src="@drawable/ic_arrow_up_white"
        app:layout_constraintBottom_toTopOf="@id/clSearchBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clSearchBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:alpha="0"
        android:paddingStart="20dp"
        android:paddingTop="20dp"
        android:paddingEnd="20dp"
        app:layout_constraintBottom_toTopOf="@id/fastscroller"
        app:layout_constraintTop_toBottomOf="@id/ivDragIcon"
        tools:alpha="1">

        <FrameLayout
            android:id="@+id/etContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <EditText
                android:id="@+id/etSearch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@null"
                android:drawableStart="@drawable/ic_search_white"
                android:focusedByDefault="false"
                android:gravity="start"
                android:hint="@string/search_apps"
                android:maxLength="20"
                android:maxLines="1"
                android:padding="10dp"
                android:singleLine="true"
                android:textColor="@color/search_bar"
                android:textColorHint="@color/search_bar"
                android:textCursorDrawable="@null"
                android:textSize="@dimen/font_large" />
        </FrameLayout>


        <ImageView
            android:id="@+id/ivSeparator"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="10dp"
            android:background="@color/search_bar"
            android:contentDescription="@string/image"
            app:layout_constraintTop_toBottomOf="@id/etContainer"
            tools:layout_marginBottom="20dp" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.qtalk.recyclerviewfastscroller.RecyclerViewFastScroller
        android:id="@+id/fastscroller"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:handleDrawable="@drawable/fast_scroll_handle"
        app:handleHeight="40dp"
        app:handleWidth="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/clSearchBar">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvHideApps"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:itemCount="25"
            tools:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
            tools:listitem="@layout/cell_app_info"
            tools:spanCount="5" />
    </com.qtalk.recyclerviewfastscroller.RecyclerViewFastScroller>
</androidx.constraintlayout.widget.ConstraintLayout>