<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/ivWallpaper"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/image"
        android:scaleType="centerCrop"
        android:src="@drawable/lion" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black_transparent"
        android:paddingStart="10dp"
        android:paddingTop="20dp"
        android:paddingEnd="10dp">

        <ImageView
            android:id="@+id/btnBack"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginTop="20dp"
            android:contentDescription="@string/button"
            android:src="@drawable/ic_back_white"
            app:layout_constraintBottom_toTopOf="@id/ivSeparator"
            app:layout_constraintStart_toStartOf="@id/ivSeparator"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvStatus"
            style="@style/Text.Primary.Bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:gravity="center"
            android:text="@string/select_application_to_hide"
            android:textColor="@color/white"
            android:textSize="@dimen/font_medium_large"
            app:layout_constraintBottom_toBottomOf="@id/btnBack"
            app:layout_constraintStart_toEndOf="@id/btnBack"
            app:layout_constraintTop_toTopOf="@id/btnBack" />

        <ImageView
            android:id="@+id/btnCheck"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:contentDescription="@string/button"
            android:src="@drawable/ic_check_white_disabled"
            app:layout_constraintBottom_toBottomOf="@id/btnBack"
            app:layout_constraintEnd_toEndOf="@id/ivSeparator"
            app:layout_constraintTop_toTopOf="@id/btnBack" />

        <ImageView
            android:id="@+id/ivSeparator"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="10dp"
            android:background="@color/shadow_white"
            android:contentDescription="@string/separator"
            app:layout_constraintTop_toBottomOf="@id/btnBack" />

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:fillViewport="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ivSeparator">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <com.l4digital.fastscroll.FastScrollRecyclerView
                    android:id="@+id/rvUnHideApps"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:nestedScrollingEnabled="false"
                    app:bubbleColor="@color/search_bar"
                    app:bubbleTextColor="@color/white"
                    app:handleColor="@color/search_bar"
                    app:hideScrollbar="true"
                    app:layout_constraintBottom_toTopOf="@id/ivSeparatorRvs"
                    app:layout_constraintTop_toTopOf="parent"
                    app:showTrack="false"
                    tools:itemCount="25"
                    tools:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                    tools:listitem="@layout/cell_app_selector"
                    tools:spanCount="4" />

                <ImageView
                    android:id="@+id/ivSeparatorRvs"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="5dp"
                    android:visibility="gone"
                    android:layout_marginBottom="5dp"
                    android:background="@color/shadow_white"
                    android:contentDescription="@string/separator"
                    app:layout_constraintBottom_toTopOf="@id/rvHideApps"
                    app:layout_constraintTop_toBottomOf="@id/rvUnHideApps" />

                <com.l4digital.fastscroll.FastScrollRecyclerView
                    android:id="@+id/rvHideApps"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:nestedScrollingEnabled="false"
                    app:bubbleColor="@color/search_bar"
                    app:bubbleTextColor="@color/white"
                    app:handleColor="@color/search_bar"
                    app:hideScrollbar="true"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/ivSeparatorRvs"
                    app:showTrack="false"
                    tools:itemCount="25"
                    tools:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                    tools:listitem="@layout/cell_app_selector"
                    tools:spanCount="4" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.core.widget.NestedScrollView>


    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>